force-app/main/default/objects/TR_Deviation__c/TR_Deviation__c.object-meta.xml
<CustomObject>
    <label>TR Deviation</label>
    <nameField>
        <displayFormat>TDEV-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TR Deviations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>