force-app/main/default/objects/TR_Deviation__c/fields/Applicable_for__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for__c</fullName>
    <label>Applicable for</label>
    <length>80</length>
    <type>Text</type>
</CustomField>