force-app/main/default/objects/TR_Deviation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>TR Deviations</relationshipLabel>
    <relationshipName>TR_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>