force-app/main/default/objects/TR_Deviation__c/fields/Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approval_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Authority</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TR_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>