force-app/main/default/objects/TR_Deviation__c/fields/Deviation_Code__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Code__c</fullName>
    <label>Deviation Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>