force-app/main/default/objects/TR_Deviation__c/fields/Deviation_Description__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Description__c</fullName>
    <label>Deviation Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>