force-app/main/default/objects/TR_Deviation__c/fields/Is_Deviation_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Deviation_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deviation Active</label>
    <type>Checkbox</type>
</CustomField>