force-app/main/default/objects/TR_Deviation__c/fields/Is_Deviation_Raised__c.field-meta.xml
<CustomField>
    <fullName>Is_Deviation_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deviation Raised?</label>
    <type>Checkbox</type>
</CustomField>