force-app/main/default/objects/TR_Deviation__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>TR Deviations</relationshipLabel>
    <relationshipName>TR_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>