force-app/main/default/objects/TR_Deviation__c/fields/Mitigants__c.field-meta.xml
<CustomField>
    <fullName>Mitigants__c</fullName>
    <label>Mitigants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>