force-app/main/default/objects/TR_Deviation__c/fields/MS_Deviation__c.field-meta.xml
<CustomField>
    <fullName>MS_Deviation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MS Deviation</label>
    <referenceTo>MS_Deviation__c</referenceTo>
    <relationshipLabel>TR Deviations</relationshipLabel>
    <relationshipName>TR_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>