force-app/main/default/objects/TR_Deviation__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>TR Deviations</relationshipLabel>
    <relationshipName>TR_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>