force-app/main/default/objects/TR_Deviation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deviation_Type__c</columns>
    <columns>MS_Deviation__c</columns>
    <columns>Application__c</columns>
    <columns>Approval_Authority__c</columns>
    <columns>Approval_Level__c</columns>
    <columns>Applicable_for__c</columns>
    <columns>Is_Deviation_Raised__c</columns>
    <columns>Decistion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>